Fixing overflow appearance

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,7 @@
 }
 
 html {
+  overflow-x: hidden;
   background: #000;
   font-size: 100%;
   font-size: clamp(100%, min(4vw, 5vh), 200%);
@@ -49,7 +50,7 @@ body {
 
   &:before {
     content: '';
-    position: absolute;
+    position: fixed;
     inset: 0;
     background:
       url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1 1' preserveAspectRatio='none'%3E%3Cdefs%3E%3Cfilter id='f'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='99' numOctaves='4' result='t'/%3E%3CfeFlood flood-color='%23000' result='f'/%3E%3CfeComposite in='t' in2='f' operator='xor'/%3E%3C/filter%3E%3C/defs%3E%3Crect width='1' height='1' filter='url(%23f)' opacity='0.3'/%3E%3C/svg%3E") 50% 50% / 128px 128px,
@@ -58,7 +59,7 @@ body {
 }
 
 canvas {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
